services/nginx/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "false"
    gethomepage.dev/href: https://nginx.test.local.hohepa.dev
    gethomepage.dev/group: Sample
    gethomepage.dev/name: Nginx
    gethomepage.dev/description: Sample nginx deployment
    gethomepage.dev/icon: nginx.png
    gethomepage.dev/app: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: test-local-hohepa-dev-tls
