services/nginx/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.local.hohepa.dev`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    # secretName: local-hohepa-dev-staging-tls
    secretName: local-hohepa-dev-tls
